implemented Lazy Loading of images

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           src="img/grow-lazy.jpg"
           data-src="img/grow.jpg"
           alt="Plant"
-          class="features__img lazy-img"
+          class="features__img"
         />
 
         <img
